--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run frontend tests
         run: |
           cd FrontEnd
-          npm run test -- --watchAll=false
+          npm run test
 
   # Test backend (ASP.NET Core API)
   test-backend:
@@ -54,3 +54,24 @@ jobs:
         run: |
           cd BackEnd
           dotnet test --no-build --verbosity normal
+
+# ---------- Deploy Backend (Docker -> Docker Hub -> Railway) ----------
+  deploy-backend:
+    needs: test-backend
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          push: true
+          tags: your-dockerhub-username/your-backend:latest
